tests/expected_invalid_parse_missing_module_kind.diag.out
<input>:1:1: error: expected module kind (domain, boundary, foundation, or hazard) before `module`
    module missing_kind {
    ^^^^^^
<input>:5:5: error: expected module kind (domain, boundary, foundation, or hazard) before `module`
        module nested_missing_kind {
        ^^^^^^
